--- a/Sistema-Vendas.csproj
+++ b/Sistema-Vendas.csproj
@@ -184,6 +184,12 @@
     <Compile Include="Views\CadastroModelos.Designer.cs">
       <DependentUpon>CadastroModelos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\CadastroOS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\CadastroOS.Designer.cs">
+      <DependentUpon>CadastroOS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\CadastroPessoasPai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -266,6 +272,12 @@
     <Compile Include="Views\ConsultaModelos.Designer.cs">
       <DependentUpon>ConsultaModelos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\ConsultaOS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ConsultaOS.Designer.cs">
+      <DependentUpon>ConsultaOS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ConsultaPai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -332,6 +344,9 @@
     <EmbeddedResource Include="Views\CadastroModelos.resx">
       <DependentUpon>CadastroModelos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\CadastroOS.resx">
+      <DependentUpon>CadastroOS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\CadastroPessoasPai.resx">
       <DependentUpon>CadastroPessoasPai.cs</DependentUpon>
     </EmbeddedResource>
@@ -370,6 +385,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ConsultaModelos.resx">
       <DependentUpon>ConsultaModelos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ConsultaOS.resx">
+      <DependentUpon>ConsultaOS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ConsultaPai.resx">
       <DependentUpon>ConsultaPai.cs</DependentUpon>
