--- a/Sistema-Vendas.csproj
+++ b/Sistema-Vendas.csproj
@@ -204,6 +204,12 @@
     <Compile Include="Views\CadastroModelos.Designer.cs">
       <DependentUpon>CadastroModelos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\CadastroNotaCompra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\CadastroNotaCompra.Designer.cs">
+      <DependentUpon>CadastroNotaCompra.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\CadastroOS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -292,6 +298,12 @@
     <Compile Include="Views\ConsultaModelos.Designer.cs">
       <DependentUpon>ConsultaModelos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\ConsultaNotaCompra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ConsultaNotaCompra.Designer.cs">
+      <DependentUpon>ConsultaNotaCompra.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ConsultaOS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -364,6 +376,9 @@
     <EmbeddedResource Include="Views\CadastroModelos.resx">
       <DependentUpon>CadastroModelos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\CadastroNotaCompra.resx">
+      <DependentUpon>CadastroNotaCompra.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\CadastroOS.resx">
       <DependentUpon>CadastroOS.cs</DependentUpon>
     </EmbeddedResource>
@@ -405,6 +420,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ConsultaModelos.resx">
       <DependentUpon>ConsultaModelos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\ConsultaNotaCompra.resx">
+      <DependentUpon>ConsultaNotaCompra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ConsultaOS.resx">
       <DependentUpon>ConsultaOS.cs</DependentUpon>
